--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "daisyui": "^5.0.19",
     "tailwindcss": "^4.1.3",
     "xml2js": "^0.6.2"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
